# kist_legged_robot

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: comm.h  cppTypes.h  quadruped.h
common/include/Controllers/: DesiredStateCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
common/include/Dynamics/: A1.h  CustomModel.h  Quadruped.h
common/include/SparseCMPC/: SparseCMPC.h
common/include/Utilities/: SharedMemory.h  save_file.h
common/src/Controllers/: DesiredStateCommand.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
common/src/Dynamics/: CustomModel.cpp
config/: a1.urdf  kist-ctrl-user-parameters.yaml  kist-legged-robot-defaults.yaml
robot/: CMakeLists.txt
robot/include/: KIST_Controller.hpp  KIST_UserParameters.h  RobotController.h  RobotRunner.h  a1_const.h  comm.h  custommath.h  kist_legged_robot.h  lcm.h  lcm_server.h  loop.h  quadruped.h
robot/include/FSM_States/: ControlFSM.h  ControlFSMData.h  FSM_State.h  FSM_State_BalanceWalking.h  FSM_State_Locomotion.h  FSM_State_StandUp.h
robot/src/: KIST_Controller.cpp  RobotRunner.cpp  main.cpp
robot/src/Controller/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerVBL.cpp  BalanceControllerVBL.hpp  BalanceControllerWrapper.cpp  ReferenceGRF.cpp  ReferenceGRF.hpp
robot/src/Controller/WBC/WBIC/: KinWBC.hpp  WBIC.cpp  WBIC.hpp
robot/src/Controller/WBC_Ctrl/: WBC_Ctrl.cpp  WBC_Ctrl.hpp
robot/src/Controller/WBC_Ctrl/ContactSet/: FixedBodyContact.cpp  FixedBodyContact.hpp  SingleContact.cpp  SingleContact.hpp
robot/src/Controller/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
robot/src/Controller/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyOriTask.hpp  BodyPosTask.cpp  BodyPosTask.hpp  BodyPostureTask.cpp  BodyPostureTask.hpp  BodyRyRzTask.cpp  BodyRyRzTask.hpp  JPosTask.cpp  JPosTask.hpp  LinkPosTask.cpp  LinkPosTask.hpp  LocalHeadPosTask.cpp  LocalHeadPosTask.hpp  LocalPosTask.cpp  LocalPosTask.hpp  LocalRollTask.cpp  LocalRollTask.hpp  LocalTailPosTask.cpp  LocalTailPosTask.hpp
robot/src/Controller/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Locomotion.cpp  Locomotion.h  SolverMPC.cpp
robot/src/FSM_States/: ControlFSM.cpp  FSM_State.cpp  FSM_State_BalanceWalking.cpp  FSM_State_JointPD.cpp  FSM_State_Locomotion.cpp  FSM_State_Passive.cpp  FSM_State_StandUp.cpp  SafetyChecker.cpp
